# path-parser

./: AGENTS.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
src/: app.rs  main.rs  path.rs  theme.rs  ui.rs
